# v3i

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml  ruff.toml
docs/: STACKED_PERCEPTRON_DESIGN.md
notebooks/: playground.py
notebooks/__marimo__/session/: playground.py.json
src/v3i/: __init__.py  algebra.py  cumulative_cross_product.py  custom_char_embedding.py  custom_language_model.py  logger.py  make_data.py  numbers.py  octonion_cross_product.py  operations.py  tracking.py  train_model.py  train_nn.py  train_perceptron.py  train_stacked.py
src/v3i/data/: __init__.py  dataset.py  extract.py  make.py  mnist.py  transform.py  xor.py
src/v3i/model/: __init__.py
src/v3i/model/language/: embedding.py
src/v3i/model/vision/: __init__.py  mnist_octonion.py  mnist_quaternion.py
src/v3i/models/: run.py
src/v3i/models/baseline/: __init__.py  base.py  decision_tree.py  logistic_regression.py  random_choice.py
src/v3i/models/perceptron/: __init__.py  nn.py  octonion.py  quaterion.py  quaternion.py  utils.py
tests/: __init__.py  test_algebra.py  test_numbers.py
