[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/v3i"]

[project]
name = "v3i"
version = "0.0.1"
description = "VIII"
readme = "README.md"
authors = [
    { name = "Hieronim Kubica", email = "hkkubica@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy==2.*",
    "numpy-quaternion==2024.*",
    "matplotlib==3.*",
    "scikit-learn==1.*",
    "tqdm==4.*",
    "streamlit==1.*",
    "plotly==6.*",
    "watchdog==6.*",
    "PyYAML==6.*",
]

[dependency-groups]
dev = [
    "marimo>=0.19.11",
    "pip>=25.0.0",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]
